--- a/index.html
+++ b/index.html
@@ -11,10 +11,35 @@
 
     <header id="body-header">
         <nav>
+             <div class = "dropdown-menu text-right">
+                <div class="bars">
+                    <i class="fas fa-bars"></i>
+                </div>
+                <div class ="dropdown-list nav-menu">
+                    <ul class = "no-list-style">
+                        <li >
+                            <a href="#"> Home </a>
+                        </li>
+                        <li>
+                            <a href="#about"> About </a>
+                        </li>
+                       
+                        <li>
+                            <a href="#portfolio">Projects</a>
+                        </li>
+                        <li>
+                            <a href="#contact">Contact</a>
+                        </li>
+                    </ul>
+                    </div>
 
+             </div>  
             <ul class="horizontal-list text-center nav-menu">
                 <li>
                     <a href="#"> Home </a>
+                </li>
+                <li>
+                    <a href="#about"> About </a>
                 </li>
                 <li>
                     <a href="#portfolio">Projects</a>
